--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -31,11 +31,10 @@ jobs:
           cd data/magentaA11y
           npm ci
           npm run build
-          cp src/shared/content.json ../magenta-a11y-content.json
       
       - name: Commit and push if changed
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add data/magentaA11y data/magenta-a11y-content.json
-          git diff --staged --quiet || (git commit -m "chore: update MagentaA11y submodule and content data" && git push)
+          git add data/magentaA11y
+          git diff --staged --quiet || (git commit -m "chore: update MagentaA11y submodule" && git push)
